# sharetrace-akka

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  build.gradle  pyproject.toml  settings.gradle
.github/workflows/: codeql.yml
app/: build.gradle
app/src/main/resources/: application.conf  base.conf  config.template  debugging-barabasi-albert.conf  debugging-gnm-random.conf  debugging-random-regular.conf  debugging-scale-free.conf  debugging-watts-strogatz.conf  defaults.conf  distributions.conf  experiment-base.conf  exploratory.template  noise.conf  parameter-experiment-base.conf  parameter-experiment-config.template  parameters.conf  runner-defaults.conf  runtime-base.conf  runtime-experiment-base.conf  runtime-experiment-config.template  runtime.conf  runtime.template  runtime_barabasi-albert_1000000_standard-normal_standard-normal_standard-normal.conf  runtime_barabasi-albert_1000000_standard-normal_standard-normal_uniform.conf  runtime_barabasi-albert_1000000_standard-normal_uniform_standard-normal.conf  (+2635 more)
buildSrc/: build.gradle
core/: build.gradle
evaluation/: Evaluation.ipynb  Untitled.ipynb  __init__.py  events.py  hints.py  lib.py  metrics.py  plotting.py  settings.py  util.py
evaluation/data/runtime/: experiment.parquet
evaluation/data/runtime-baseline/: experiment.parquet
evaluation/outputs/: accuracy-percentiles.csv  accuracy-proportions.csv  accuracy_aggregate.csv  accuracy_lifted_aggregate.csv  accuracy_lifted_network-type.csv  message-reachability.csv  network-degree-percentiles.csv  relative-receives.csv  runtime-regression.csv  runtime-validity.csv  send-coefficient_accuracy_aggregate.csv
evaluation/queries/: parameter.mongodb  send-coefficient.mongodb
lib/: build.gradle
src/main/java/: Main.java
src/main/resources/: application.conf  logback.xml  reference.conf
src/test/java/: ExperimentTests.java
(+1070 files in other folders)
