[tool.poetry]
name = "evaluation"
version = "0.1.0"
description = ""
authors = ["rtatton <github893@proton.me>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"  # Setup for scipy
numpy = "^1.23.3"
pandas = "^1.5.0"
seaborn = "^0.12.1"
matplotlib = "^3.6.0"
scipy = "^1.9.1"
jupyterlab = "^3.4.7"
networkx = "^2.8.6"
ipywidgets = "^8.0.2"
polars = "^0.20.18"
pymongo = "^4.6.3"
pyhumps = "^3.8.0"
hvplot = "^0.9.2"
pyarrow = "^16.0.0"
statsmodels = "^0.14.2"

[tool.poetry.dev-dependencies]
black = { extras = ["jupyter"], version = "^22.10.0" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
