[tool.poetry]
name = "evaluation"
version = "0.1.0"
description = ""
authors = ["rtatton <github893@proton.me>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"  # Setup for scipy
ipywidgets = "^8.0.2"
jupyterlab = "^4.2.0"
numpy = "^1.23.3"
polars = { extras = ["numpy", "pandas"], version = "^0.20.18" }
pyarrow = "^16.0.0"
scipy = "^1.9.1"
seaborn = "^0.13.2"

[tool.poetry.dev-dependencies]
black = { extras = ["d", "jupyter"], version = "^24.4.2" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
