[tool.poetry]
name = "evaluation"
version = "0.1.0"
description = ""
authors = ["rtatton <github893@proton.me>"]

[tool.poetry.dependencies]
python = ">=3.10"  # Setup for scipy
ipywidgets = "^8.0.2"
jupyterlab = "^4.2.5"
numpy = "^2.1.2"
polars = { extras = ["numpy", "pandas"], version = "^1.10.0" }
pyarrow = "^18.0.0"
scipy = "^1.14.1"
seaborn = "^0.13.2"
pingouin = "^0.5.5"

[tool.poetry.dev-dependencies]
black = { extras = ["d", "jupyter"], version = "^24.4.2" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
